--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
